--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 23</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> waiphyo285.dev@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 24</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.C.Sc</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> waiphyo.dev@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
@@ -571,7 +571,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>waiphyo285.dev@gmail.com</p>
+                <p>waiphyo.dev@gmail.com</p>
               </div>
 
               <div class="phone">
