--- a/index.html
+++ b/index.html
@@ -70,13 +70,6 @@
     </div>
   </header><!-- End Header -->
 
-  <div class="bg-danger d-flex flex-column justify-content-center">
-    <marquee class="text-light p-3" behavior="" direction="left" height="" width="100%">
-      တိုင်းပြည်အာဏာ ၃ရပ်၏ မူလပိုင်ရှင်ဖြစ်သော ပြည်သူတစ်ယောက်အနေနဲ့ တပ်မတော်အာဏာသိမ်းယူခြင်းကို ပြင်းထန်စွာ ကန့်ကွက်ရှုံ့ချပါသည်။
-      (As the original owner of the three powers of the country, I strongly condemn the military coup.)
-    </marquee>
-  </div>
-
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
@@ -109,8 +102,12 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 5 Apr 1997</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> https://waiphyo285.github.io</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +959 775 915 615</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> 
+                    <a href="http://waiphyo285.github.io"> https://waiphyo285.github.io </a> 
+                  </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 
+                    <a class="mobilesOnly" href="tel:+95 775 915 615"> (+95) 775 915 615</a>
+                  </li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Mayangon Tsp, Yangon</li>
                 </ul>
               </div>
@@ -118,7 +115,9 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 24</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.C.Sc</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> waiphyo.dev@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> 
+                    <a href="mailto:waiphyo.dev@gmail.com"> waiphyo.dev@gmail.com</a>
+                  </li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
@@ -565,19 +564,23 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>No. 196/59, Shwe Tasoke St, Middle Baho Rd, 2 Qtr, Mayangon Tsp, Yangon</p>
+                <p>
+                  <a href="https://goo.gl/maps/NFvxucVoyP8ZdA6J7">
+                    No. 196/59, Shwe Tasoke St, Middle Baho Rd, 2 Qtr, Mayangon Tsp, Yangon
+                  </a
+                ></p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
-                <h4>Email:</h4>
-                <p>waiphyo.dev@gmail.com</p>
+                <h4>Send to:</h4>
+                <p><a href="mailto:waiphyo.dev@gmail.com"> waiphyo.dev@gmail.com</a></p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
-                <h4>Call:</h4>
-                <p>(+95) 775915615</p>
+                <h4>Call now:</h4>
+                <p><a class="mobilesOnly" href="tel:+95 775915615"> (+95) 775 915 615</a></p>
               </div>
               <div class="mapouter">
                 <div class="gmap_canvas">
@@ -638,6 +641,14 @@
       </div>
     </section><!-- End Contact Section -->
 
+    
+  <div class="bg-danger d-flex flex-column justify-content-center" style="position: relative;">
+    <marquee class="text-light p-3" behavior="" direction="left" height="" width="100%">
+      တိုင်းပြည်အာဏာ (၃) ရပ်၏ မူလပိုင်ရှင်ဖြစ်သော ပြည်သူတစ်ယောက်အနေနဲ့ ဖေဖော်ဝါရီ (၁) ရက်၊ ၂၀၂၁ ခုနှစ်တွင် လက်ရှိပြည်သူ့အစိုးရထံမှ တပ်မတော်ကအာဏာသိမ်းယူခြင်းကို ပြင်းထန်စွာ ကန့်ကွက်ရှုံ့ချပါသည်။
+      (As the original owner of the three powers of the country, I strongly condemn the military coup.)
+    </marquee>
+  </div>
+
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -651,7 +662,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Powered by <a href="https://github.com/waiphyo285">Wai Phyo Naing</a>
+        <a href="https://github.com/waiphyo285"><i class="bx bxl-github"></i> Wai Phyo Naing</a> 
       </div>
     </div>
   </footer><!-- End  Footer -->
