--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <a href="http://waiphyo285.github.io"> https://waiphyo285.github.io </a> 
                   </li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 
-                    <a class="mobilesOnly" href="tel:+95 775 915 615"> (+95) 775 915 615</a>
+                    <a class="mobilesOnly" href="tel:+95775915615"> (+95) 775 915 615</a>
                   </li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Mayangon Tsp, Yangon</li>
                 </ul>
@@ -580,7 +580,7 @@
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call now:</h4>
-                <p><a class="mobilesOnly" href="tel:+95 775915615"> (+95) 775 915 615</a></p>
+                <p><a class="mobilesOnly" href="tel:+95775915615"> (+95) 775 915 615</a></p>
               </div>
               <div class="mapouter">
                 <div class="gmap_canvas">
