--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <!-- Google Adss -->
+  <script data-ad-client="pub-5937765593282204" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
   <!-- =======================================================
   * Template Name: iPortfolio - v1.5.0
   * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
