--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <!-- <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet"> -->
+  <!-- <link href="assets/vendor/venobox/venobox.css" rel="stylesheet"> -->
+  <!-- <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet"> -->
+  <!-- <link href="assets/vendor/aos/aos.css" rel="stylesheet"> -->
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -51,21 +51,19 @@
         <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="#hero">Wai Phyo Naing</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://twitter.com/waiphyo285" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://web.facebook.com/waiphyo285" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.linkedin.com/in/wai-phyo-naing/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://twitter.com/waiphyo285" class="twitter"><i class="icofont-twitter"></i></a>
+          <a href="https://web.facebook.com/waiphyo285" class="facebook"><i class="icofont-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/wai-phyo-naing/" class="linkedin"><i class="icofont-linkedin"></i></a>
         </div>
       </div>
 
       <nav class="nav-menu">
         <ul>
-          <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <!-- <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li> -->
-          <!-- <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li> -->
-          <li><a href="#services"><i class="bx bx-server"></i> Services</a></li>
-          <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
-
+          <li class="active"><a href="#hero"><i class="icofont-home"></i> <span>Home</span></a></li>
+          <li><a href="#about"><i class="icofont-user"></i> <span>About</span></a></li>
+          <li><a href="#resume"><i class="icofont-file-document"></i> <span>Resume</span></a></li>
+          <li><a href="#services"><i class="icofont-list"></i> Services</a></li>
+          <li><a href="#contact"><i class="icofont-envelope"></i> Contact</a></li>
         </ul>
       </nav><!-- .nav-menu -->
       <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
@@ -125,12 +123,8 @@
                 </ul>
               </div>
             </div>
-            <!-- <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p> -->
 
-            <p>
+            <p class="text-justify">
               I am a Back-End Developer for <a href="http://www.newwave-tech.com/">Glabal New Wave Technology</a> in Yangon, Myanmar.
               And I also accept the occasional freelance project. If you're interested in working with me, have a question,
               or just feel like saying hello, please feel free to drop a line !
@@ -155,32 +149,32 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="icofont-simple-smile"></i>
-              <span data-toggle="counter-up">232</span>
-              <p><strong>Happy Clients</strong> consequuntur quae</p>
+              <span data-toggle="counter-up">100</span>
+              <p><strong>Happy Code</strong></p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="icofont-document-folder"></i>
-              <span data-toggle="counter-up">521</span>
-              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
+              <span data-toggle="counter-up">100</span>
+              <p><strong>Projects</strong></p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="icofont-live-support"></i>
-              <span data-toggle="counter-up">1,463</span>
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
+              <span data-toggle="counter-up">100</span>
+              <p><strong>Hours Of Support</strong></p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="icofont-users-alt-5"></i>
-              <span data-toggle="counter-up">15</span>
-              <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
+              <span data-toggle="counter-up">100</span>
+              <p><strong>Hard Workers</strong</p>
             </div>
           </div>
 
@@ -258,7 +252,7 @@
     <!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
-    <!-- <section id="resume" class="resume">
+    <section id="resume" class="resume">
       <div class="container">
 
         <div class="section-title">
@@ -273,165 +267,49 @@
               <h4>Bachelor of Computer Science</h4>
               <h5>2014 - 2019</h5>
               <p><em>University of Computer Studies, Meiktila, Myanmar</em></p>
-              <p>I had proudly studied computer science major for five years and gottten my bachelor's degree.</p>
+              <p class="text-justify">
+                I had proudly studied computer science major for five years and gottten my bachelor's degree. 
+                I wanted to work as server side programmer, so I specially focused on PHP.
+              </p>
             </div>
             <div class="resume-item">
               <h4>Internship Program</h4>
               <h5>May - July 2019</h5>
               <p><em>Global Connect Asia, Yangon, Myanmar</em></p>
               <ul>
-                <li>Learned Python Programming and PostgreSQL at a given time with new experience</li>
+                <li>Learned Python Programming and PostgreSQL for almost the first month</li>
                 <li>Became familiar with Ubuntu OS cause of Odoo is more compatible with Ubuntu</li>
-                <li>Studied Odoo's business flow and module list structure</li>
+                <li>Got to know Odoo's business flow and module list structure</li>
               </ul>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Back-End Developer</h4>
-              <h5>Dec 2019 - Present</h5>
-              <p><em>Global New Wave Technology, Yangon, Myanmar</em></p>
-              <ul>
-                <li>Write code to help a database and application communicate</li>
-                <li>Integrate tasks to the frontend team and provide APIs on all data of the project </li>
-                <li>Cross in daily life, code, code and more code</li>
-              </ul>
-            </div>
-            <div class="resume-item">
               <h4>Junior Odoo Developer</h4>
               <h5>Sep - Nov 2019</h5>
               <p><em>Global Connect Asia, Yangon, Myanmar</em></p>
               <ul>
                 <li>Learned not to misunderstand the whole Odoo's flow</li>
-                <li>Developed a logistics project and tasks while a deadline </li>
+                <li>Developed a logistics project and tasks during deadline </li>
                 <li>As a bonus, learned about APIs to deliver data to other platforms</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Back-End Developer</h4>
+              <h5>Dec 2019 - Present</h5>
+              <p><em>Global New Wave Technology, Yangon, Myanmar</em></p>
+              <ul>
+                <li>Setup database and application communicate using Node.js</li>
+                <li>Integrate server and provide the required APIs to the frontend team</li>
+                <li>Cross in daily life, code, code and more code</li>
               </ul>
             </div>
           </div>
         </div>
-
       </div>
-    </section> -->
+    </section>
     <!-- End Resume Section -->
-
-    <!-- ======= Portfolio Section ======= -->
-    <!-- <section id="portfolio" class="portfolio section-bg">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row" data-aos="fade-up">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section> -->
-    <!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
@@ -439,7 +317,7 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>
+          <p class="text-justify">
             My team-mates and me are working to create a variety of web applications and mobile applications in a fast and cost-effective way.
             So, you can come and submit the project with confidence.
           </p>
@@ -449,17 +327,17 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="icofont-dashboard-web"></i></div>
             <h4 class="title"><a href="">Web Development</a></h4>
-            <p class="description">We develop static websites provide information all about you and dymanic web applications support everyday online business such as e-commerce.</p>
+            <p class="description text-justify">We develop static websites provide information all about you and dymanic web applications support everyday online business such as e-commerce.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="icofont-stock-mobile"></i></div>
             <h4 class="title"><a href="">Mobile Development</a></h4>
-            <p class="description">We also develop mobile apps with experienced developers. Join us as you need a mobile app to get your business up and running in the changing times.</p>
+            <p class="description text-justify">We also develop mobile apps with experienced developers. Join us as you need a mobile app to get your business up and running in the changing times.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="icofont-designfloat"></i></div>
             <h4 class="title"><a href="">UI-UX</a></h4>
-            <p class="description">We also create custom designs for logos and advertisements make promote your beautiful dreams.</p>
+            <p class="description text-justify">We also create custom designs for logos and advertisements make promote your beautiful dreams.</p>
           </div>
         </div>
       </div>
@@ -652,7 +530,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        <a href="https://github.com/waiphyo285"><i class="bx bxl-github"></i> Wai Phyo Naing</a> 
+        <a href="https://github.com/waiphyo285"><i class="icofont-github"></i> Wai Phyo Naing</a> 
       </div>
     </div>
   </footer><!-- End  Footer -->
@@ -662,15 +540,15 @@
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/counterup/counterup.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <!-- <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/venobox/venobox.min.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script> -->
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
