--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
