--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Normally working as a backend developer, my work experience and educational background are as follows:</p>
         </div>
 
         <div class="row">
