--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Wai Phyo Naing -  Back-End Developer</title>
+  <title>Wai Phyo Naing - Web Developer</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +30,8 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- Google Adss -->
-  <script data-ad-client="pub-5937765593282204" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script data-ad-client="pub-5937765593282204" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   <!-- =======================================================
   * Template Name: iPortfolio - v1.5.0
@@ -75,7 +78,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Wai Phyo Naing</h1>
-      <p>I'm a typical <span class="typed" data-typed-items="Back-End Developer."></span></p>
+      <p>I'm a typical <span class="typed" data-typed-items="Web Developer."></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -94,7 +97,7 @@
             <img src="assets/img/profile-img.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Back-End Developer.</h3>
+            <h3>Web Developer.</h3>
             <!-- <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -103,10 +106,10 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 5 Apr 1997</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> 
-                    <a href="http://waiphyo285.github.io"> https://waiphyo285.github.io </a> 
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong>
+                    <a href="http://waiphyo285.github.io"> https://waiphyo285.github.io </a>
                   </li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong>
                     <a class="mobilesOnly" href="tel:+95775915615"> (+95) 775 915 615</a>
                   </li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Mayangon Tsp, Yangon</li>
@@ -116,7 +119,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 24</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.C.Sc</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> 
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong>
                     <a href="mailto:waiphyo.dev@gmail.com"> waiphyo.dev@gmail.com</a>
                   </li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
@@ -125,8 +128,10 @@
             </div>
 
             <p class="text-justify">
-              I am a Back-End Developer for <a href="http://www.newwave-tech.com/">Glabal New Wave Technology</a> in Yangon, Myanmar.
-              And I also accept the occasional freelance project. If you're interested in working with me, have a question,
+              I am a Web Developer at <a href="http://www.newwave-tech.com/">Glabal New Wave Technology</a> in Yangon,
+              Myanmar.
+              And I also accept the occasional freelance project. If you're interested in working with me, have a
+              question,
               or just feel like saying hello, please feel free to drop a line !
             </p>
           </div>
@@ -268,7 +273,7 @@
               <h5>2014 - 2019</h5>
               <p><em>University of Computer Studies, Meiktila, Myanmar</em></p>
               <p class="text-justify">
-                I had proudly studied computer science major for five years and gottten my bachelor's degree. 
+                I had proudly studied computer science major for five years and gottten my bachelor's degree.
                 I wanted to work as server side programmer, so I specially focused on PHP.
               </p>
             </div>
@@ -296,7 +301,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Back-End Developer</h4>
+              <h4>Web Developer</h4>
               <h5>Dec 2019 - Present</h5>
               <p><em>Global New Wave Technology, Yangon, Myanmar</em></p>
               <ul>
@@ -318,7 +323,8 @@
         <div class="section-title">
           <h2>Services</h2>
           <p class="text-justify">
-            My team-mates and me are working to create a variety of web applications and mobile applications in a fast and cost-effective way.
+            My team-mates and me are working to create a variety of web applications and mobile applications in a fast
+            and cost-effective way.
             So, you can come and submit the project with confidence.
           </p>
         </div>
@@ -327,17 +333,20 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="icofont-dashboard-web"></i></div>
             <h4 class="title"><a href="">Web Development</a></h4>
-            <p class="description text-justify">We develop static websites provide information all about you and dymanic web applications support everyday online business such as e-commerce.</p>
+            <p class="description text-justify">We develop static websites provide information all about you and dymanic
+              web applications support everyday online business such as e-commerce.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="icofont-stock-mobile"></i></div>
             <h4 class="title"><a href="">Mobile Development</a></h4>
-            <p class="description text-justify">We also develop mobile apps with experienced developers. Join us as you need a mobile app to get your business up and running in the changing times.</p>
+            <p class="description text-justify">We also develop mobile apps with experienced developers. Join us as you
+              need a mobile app to get your business up and running in the changing times.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="icofont-designfloat"></i></div>
             <h4 class="title"><a href="">UI-UX</a></h4>
-            <p class="description text-justify">We also create custom designs for logos and advertisements make promote your beautiful dreams.</p>
+            <p class="description text-justify">We also create custom designs for logos and advertisements make promote
+              your beautiful dreams.</p>
           </div>
         </div>
       </div>
@@ -422,7 +431,8 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Would you promote yourself or your industry, tell us what kinds of service you want to invest. We are Ready.</p>
+          <p>Would you promote yourself or your industry, tell us what kinds of service you want to invest. We are
+            Ready.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
@@ -435,8 +445,8 @@
                 <p>
                   <a href="https://goo.gl/maps/NFvxucVoyP8ZdA6J7">
                     No. 196/59, Shwe Tasoke St, Middle Baho Rd, 2 Qtr, Mayangon Tsp, Yangon
-                  </a
-                ></p>
+                  </a>
+                </p>
               </div>
 
               <div class="email">
@@ -452,9 +462,8 @@
               </div>
               <div class="mapouter">
                 <div class="gmap_canvas">
-                  <iframe
-                    id="gmap_canvas" 
-                    src="https://maps.google.com/maps?q=mayangon,%20yangon&t=&z=13&ie=UTF8&iwloc=&output=embed" 
+                  <iframe id="gmap_canvas"
+                    src="https://maps.google.com/maps?q=mayangon,%20yangon&t=&z=13&ie=UTF8&iwloc=&output=embed"
                     frameborder="0" style="border:0; width: 100%; height: 300px;" allowfullscreen>
                   </iframe>
                   <a href="https://embedgooglemap.net/maps/69"></a><br>
@@ -462,7 +471,7 @@
                   <style>
                     .gmap_canvas {
                       overflow: hidden;
-                      background: none!important;
+                      background: none !important;
                     }
                   </style>
                 </div>
@@ -476,23 +485,27 @@
               <div class="form-row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                  <input type="text" name="name" class="form-control" id="name" data-rule="minlen:4"
+                    data-msg="Please enter at least 4 chars" />
                   <div class="validate"></div>
                 </div>
                 <div class="form-group col-md-6">
                   <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" data-rule="email" data-msg="Please enter a valid email" />
+                  <input type="email" class="form-control" name="email" id="email" data-rule="email"
+                    data-msg="Please enter a valid email" />
                   <div class="validate"></div>
                 </div>
               </div>
               <div class="form-group">
                 <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                <input type="text" class="form-control" name="subject" id="subject" data-rule="minlen:4"
+                  data-msg="Please enter at least 8 chars of subject" />
                 <div class="validate"></div>
               </div>
               <div class="form-group">
                 <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" data-rule="required" data-msg="Please write something for us"></textarea>
+                <textarea class="form-control" name="message" rows="10" data-rule="required"
+                  data-msg="Please write something for us"></textarea>
                 <div class="validate"></div>
               </div>
               <div class="mb-3">
@@ -509,13 +522,14 @@
       </div>
     </section><!-- End Contact Section -->
 
-    
-  <div class="bg-danger d-flex flex-column justify-content-center" style="position: relative;">
-    <marquee class="text-light p-3" behavior="" direction="left" height="" width="100%">
-      တိုင်းပြည်အာဏာ (၃) ရပ်၏ မူလပိုင်ရှင်ဖြစ်သော ပြည်သူတစ်ယောက်အနေနဲ့ ဖေဖော်ဝါရီ (၁) ရက်၊ ၂၀၂၁ ခုနှစ်တွင် လက်ရှိပြည်သူ့အစိုးရထံမှ တပ်မတော်ကအာဏာသိမ်းယူခြင်းကို ပြင်းထန်စွာ ကန့်ကွက်ရှုံ့ချပါသည်။
-      (As the original owner of the three powers of the country, I strongly condemn the military coup.)
-    </marquee>
-  </div>
+
+    <div class="bg-danger d-flex flex-column justify-content-center" style="position: relative;">
+      <marquee class="text-light p-3" behavior="" direction="left" height="" width="100%">
+        တိုင်းပြည်အာဏာ (၃) ရပ်၏ မူလပိုင်ရှင်ဖြစ်သော ပြည်သူတစ်ယောက်အနေနဲ့ ဖေဖော်ဝါရီ (၁) ရက်၊ ၂၀၂၁ ခုနှစ်တွင်
+        လက်ရှိပြည်သူ့အစိုးရထံမှ တပ်မတော်ကအာဏာသိမ်းယူခြင်းကို ပြင်းထန်စွာ ကန့်ကွက်ရှုံ့ချပါသည်။
+        (As the original owner of the three powers of the country, I strongly condemn the military coup.)
+      </marquee>
+    </div>
 
   </main><!-- End #main -->
 
@@ -530,7 +544,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        <a href="https://github.com/waiphyo285"><i class="icofont-github"></i> Wai Phyo Naing</a> 
+        <a href="https://github.com/waiphyo285"><i class="icofont-github"></i> Wai Phyo Naing</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
