--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/profile-img.png" rel="icon">
+  <link href="assets/img/profile-img-circle.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -32,6 +32,9 @@
   <!-- Google Adss -->
   <script data-ad-client="pub-5937765593282204" async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+  <!-- Linkedin Badge -->
+  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 
   <!-- =======================================================
   * Template Name: iPortfolio - v1.5.0
@@ -94,7 +97,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.png" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.png" class="img-fluid rounded-circle" alt="" width="280", height="280">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Web Developer.</h3>
